--- a/public/styles.css
+++ b/public/styles.css
@@ -112,7 +112,7 @@ nav a {
 .section {
     padding: 20px;
     display: grid; /* Change display to grid */
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Set columns to auto-fill with a minimum width of 200px */
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); /* Set columns to auto-fill with a minimum width of 200px */
     grid-auto-rows: minmax(50px, auto); /* Set rows to automatically adjust height */
     gap: 20px; /* Add gap between grid items */
     align-items: center;
@@ -148,13 +148,17 @@ nav a {
 
 .sound-bar-text {
     position: absolute;
-    left: 50%; /* Position the left edge of the text at the center of the container */
-    top: 0;
-    transform: translateX(-50%); /* Shift the text left by half its width to truly center it */
+    left: 0; /* Align left edge to the container's left edge */
+    right: 0; /* Align right edge to the container's right edge */
+    top: 0; /* Align top to the container's top */
     color: white; /* Text color for visibility against the progress bar */
     z-index: 2; /* Ensures text is above the progress bar */
-    text-align: center; /* Ensure text alignment is centered, good for multi-line */
+    text-align: center; /* Center text horizontally */
+    overflow: hidden; /* Prevents text from overflowing */
+    white-space: nowrap; /* Keeps the text on one line */
+    text-overflow: ellipsis; /* Adds an ellipsis if the text overflows the available space */
 }
+
 .icon {
     position: absolute;
     top: 25%; /* Adjust top positioning to center vertically */
