--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -423,31 +423,15 @@ nav a {
 
 /* Credit modal styling */
 .credit-modal-template,
-.all-credits-modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    overflow-y: auto;
-}
+.all-credits-modal {}
 
-.credit-modal-template {
-    top: 10px;
-    right: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-}
+.credit-modal-template {}
 
 .credit-content {
     text-align: left;
 }
 
-.close-btn {
-    float: right;
-    font-size: 20px;
-    cursor: pointer;
-}
+.close-btn {}
 
 .all-credits-modal {
     top: 0;
