--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    #credit-details a {
+        @apply text-accent hover:underline font-semibold;
+    }
+    #credit-details .title {
+        @apply font-bold text-xl;
+    }
+}
