--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -9,4 +9,7 @@
     #credit-details .title {
         @apply font-bold text-xl;
     }
+    .button {
+        @apply text-accent hover:underline font-semibold;
+    }
 }
