betetr progess selector

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -12,6 +12,9 @@
     .button {
         @apply text-accent hover:underline font-semibold;
     }
+    .disabledMusicButton {
+        @apply pointer-events-none opacity-50 cursor-not-allowed;
+    }
     .neon {
         @apply bg-gradient-to-r from-pink-500 via-purple-500 to-blue-500 bg-[length:200%_200%] bg-clip-text text-transparent;
     }
@@ -24,15 +27,14 @@
 
     /* Slider Thumb */
     .slider::-webkit-slider-thumb {
-        @apply appearance-none h-4 w-4 rounded-full bg-fontColor shadow-lg cursor-pointer;
+        @apply appearance-none h-4 w-4 border-2 rounded-full bg-purple-500 shadow-lg cursor-pointer;
     }
 
     .slider::-moz-range-thumb {
-        @apply appearance-none h-4 w-4 rounded-full bg-slate-200 shadow-lg cursor-pointer;
+        @apply appearance-none h-4 w-4 border-2 rounded-full bg-purple-500 shadow-lg cursor-pointer;
     }
 
     .slider::-ms-thumb {
-        @apply appearance-none h-4 w-4 rounded-full bg-slate-200 shadow-lg cursor-pointer;
+        @apply appearance-none h-4 w-4 border-2 rounded-full bg-purple-500 shadow-lg cursor-pointer;
     }
-
 }
