--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -47,11 +47,15 @@
     }
 
     .menu-item {
-        @apply w-full px-4 py-3 text-gray-700 bg-slate-100 rounded-md shadow-md hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-transparent focus:bg-gradient-to-r focus:from-pink-500 focus:via-purple-500 focus:to-blue-500;
+        @apply w-full px-4 py-3 text-gray-700 bg-slate-100 rounded-md shadow-md hover:bg-gray-300;
     }
 
     .menu-divider {
         @apply w-full h-[1px] bg-gray-300;
+    }
+
+    .sound-container {
+        @apply flex flex-wrap justify-center gap-2.5;
     }
 
 }
