--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -159,20 +159,19 @@ header {
     transform: translateX(-50%);
     z-index: 0;
     text-align: center;
-    padding: 5px 10px;
     color: black;
-    background-color: rgba(255, 255, 255, 0.7);
+    font-weight: bold;
     user-select: none;
     pointer-events: none;
 }
 
 .sound-bar-text {
-    top: 10px;
+    top: 1px;
     width: 80%;
 }
 
 .sound-bar-licence {
-    bottom: 10px;
+    bottom: 5px;
     width: 40%;
     height: 15px;
     font-size: 10px;
@@ -269,7 +268,7 @@ nav a {
 .progress-bar-volume:hover,
 .progress-bar-volume.touch-hover {
     opacity: 1;
-    transition: opacity 300ms;
+    transition: opacity 500ms;
 }
 
 .progress-bar-volume.plus {
@@ -288,7 +287,7 @@ nav a {
     height: 2px;
     width: 20px;
     position: absolute;
-    top: 75%;
+    top: 50%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -300,7 +299,7 @@ nav a {
     height: 2px;
     width: 20px;
     position: absolute;
-    top: 80%;
+    top: 50%;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -311,7 +310,7 @@ nav a {
     height: 2px;
     width: 20px;
     position: absolute;
-    top: 80%;
+    top: 50%;
     left: 50%;
     transform: translateX(-50%) rotate(90deg);
 }
