--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -9,9 +9,15 @@
     #credit-details .title {
         @apply font-bold text-xl;
     }
+
     .button {
         @apply text-accent hover:underline font-semibold;
     }
+
+    .sound-board-button {
+        @apply text-[12px] px-4 font-bold tracking-widest text-fontColor hover:underline;
+    }
+
     .disabledMusicButton {
         @apply pointer-events-none opacity-50 cursor-not-allowed;
     }
@@ -63,6 +69,30 @@
     }
 
     .progress-bar-overlay {
-        @apply absolute inset-0 bg-white opacity-30;
+        @apply absolute inset-0 bg-black opacity-35;
     }
+
+    /* Section styling */
+    .section {
+        @apply grid grid-cols-6 grid-flow-row-dense gap-5 p-5 bg-slate-950;
+        @apply grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6;
+    }
+
+    .section-sound-board {
+        @apply grid-flow-row gap-5 p-5;
+        @apply grid-cols-5 sm:grid-cols-7 md:grid-cols-9 lg:grid-cols-11 xl:grid-cols-12
+    }
+    /* End of section styling */
+
+    /* Ambient Sound and card styling */
+    .sound-bar-text {
+        @apply absolute left-1/2 transform -translate-x-1/2 z-0 text-center text-slate-100 font-semibold font-lato select-none pointer-events-none top-1 w-4/5;
+    }
+
+    .sound-bar-licence {
+        @apply absolute left-1/2 transform -translate-x-1/2 z-0 text-center text-slate-100 font-bold font-lato select-none pointer-events-none bottom-1 w-2/5 h-[15px] text-[10px] ;
+    }
+    /* End of Ambient Sound and card styling */
+
+
 }
