--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -10,9 +10,22 @@
         @apply font-bold text-xl;
     }
 
-    .button {
-        @apply text-accent hover:underline font-semibold;
+    .buttonOutlined {
+        @apply bg-transparent hover:bg-slate-700 font-medium text-slate-900 hover:text-slate-100 py-2 px-4 border border-slate-900 hover:border-transparent rounded;
     }
+
+    .buttonOutlined:disabled {}
+
+    .button {
+        @apply bg-transparent bg-slate-700 font-medium text-slate-100 py-2 px-4 border border-transparent rounded;
+        @apply transition-colors duration-300 ease-in-out; /* Smooth transition */
+    }
+
+    .button:hover {
+        @apply bg-purple-700 text-slate-100 border-purple-700; /* Hover effect */
+    }
+
+    .button:disabled {}
 
     .sound-board-button {
         @apply text-[12px] px-4 font-bold tracking-widest text-fontColor hover:underline;
