--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -12,6 +12,7 @@
 
     .buttonOutlined {
         @apply bg-transparent hover:bg-slate-700 font-medium text-slate-900 hover:text-slate-100 py-2 px-4 border border-slate-900 hover:border-transparent rounded;
+        @apply transition-colors duration-300 ease-in-out; /* Smooth and slower transition */
     }
 
     .buttonOutlined:disabled {}
