--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,7 +23,6 @@ body, html {
     color: #fff;
 }
 
-/* Global link styles */
 a {
     color: #3498db;
     text-decoration: none;
@@ -33,102 +32,9 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Link styles within the credit section */
-#background-music-Credit {
-    text-align: center;
-    margin: 10px 0;
-}
-
-#background-music-Credit a {
-    color: #388497;
-    margin-bottom: 0;
-}
-
-#background-music-Credit a:hover {
-    text-decoration: underline;
-}
-
-/* Heading styles */
 h2 {
     text-align: center;
     margin-bottom: 20px;
-}
-
-/* Button styling */
-button {
-    font-family: BagnardSans;
-    background-color: #555;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-}
-
-/* Specific button variations */
-.button-primary {
-    background-color: #008CBA;
-}
-
-.button-secondary {
-    background-color: #f44336;
-}
-
-.button-directory {
-    background-color: #4CAF50;
-    padding: 6px 12px;
-    font-size: 0.9em;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s, box-shadow 0.3s;
-}
-
-.button-directory:hover {
-    background-color: #367C39;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
-}
-
-.button-play {
-    background-color: #4CAF50;
-    display: block;
-}
-
-.button-stop {
-    background-color: #f44336;
-    display: block;
-}
-
-.button-stop:disabled {
-    background-color: #803d38;
-    cursor: not-allowed;
-}
-
-.button-loop {
-    background-color: #487aa8;
-    display: block;
-}
-
-/* Header styling */
-header {
-    background-size: cover;
-    padding: 20px;
-    text-align: center;
-    position: relative;
-    color: #fff;
-}
-
-.header-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 8px;
-    padding: 20px;
 }
 
 .top-left-controls {
@@ -154,7 +60,6 @@ header {
     text-align: center;
 }
 
-/* Icon styling */
 .icon {
     position: absolute;
     top: 25%;
@@ -166,7 +71,6 @@ header {
     pointer-events: none;
 }
 
-/* Section styling */
 .section {
     padding: 20px;
     display: grid;
@@ -177,598 +81,22 @@ header {
     justify-content: center;
 }
 
-/* Sound container and buttons */
-.sound-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-}
 
-.sound-button {
-    flex-basis: calc(33.333% - 10px);
-    text-align: center;
-}
 
-.button {
-    flex: 1 0 auto;
-    text-align: center;
-    text-transform: capitalize;
-}
-
-.button .volume-slider {
-    display: block;
-    margin-top: 15px;
-    width: 100%;
-}
-
-/* Progress bar styling */
-.progress-bar-container {
-    position: relative;
-    width: 100%;
-    height: 100px;
-    background-color: #f44336;
-    overflow: hidden;
-    background-position: center;
-    background-size: cover;
-    border-radius: 5px;
-    border: 2px solid #ee951f;
-}
-
-.progress-bar {
-    background-color: rgba(76, 175, 80, 0.6);
-    width: 0%;
-    height: 100%;
-    transition: width 0.3s ease;
-}
-
-.sound-bar-text,
-.sound-bar-licence {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 0;
-    text-align: center;
-    padding: 5px 10px;
-    color: black;
-    background-color: rgba(255, 255, 255, 0.7);
-    user-select: none;
-    pointer-events: none;
-}
-
-.sound-bar-text {
-    top: 10px;
-    width: 80%;
-}
-
-.sound-bar-licence {
-    bottom: 10px;
-    width: 40%;
-    height: 15px;
-    font-size: 10px;
-    padding: 1px;
-}
-
-/* Navigation styling */
-nav {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #222;
-    display: flex;
-    justify-content: space-around;
-    padding: 10px 0;
-}
-
-nav a {
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    display: block;
-}
-
-/* Modal styling */
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.modal-content {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
-    background-color: transparent;
-    padding: 0;
-    border: none;
-    border-radius: 0;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.close-button {
-    color: #aaa;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    z-index: 1001;
-}
-
-.close-button:hover,
-.close-button:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
-
-#external-modal-body {
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    padding: 20px;
-    box-sizing: border-box;
-    background-color: #444;
-}
-
-/* Progress bar volume controls */
-.progress-bar-volume {
-    display: block;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    opacity: 0;
-    
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: rgba(100,100,100,0.6);
-}
-.progress-bar-volume:hover,
-.progress-bar-volume.touch-hover {
-    opacity: 1;
-    transition: opacity 300ms;
-}
-
-.progress-bar-volume.plus {
-    left: 50%;
-    right: 0;
-}
-.progress-bar-volume.minus {
-    left: 0;
-    right: 50%;
-}
-
-.progress-bar-volume.minus:before {
-    content: "";
-    display: block;
-    background-color: white;
-    height: 2px;
-    width: 20px;
-    position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.progress-bar-volume.plus:before {
-    content: "";
-    display: block;
-    background-color: white;
-    height: 2px;
-    width: 20px;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.progress-bar-volume.plus:after {
-    content: "";
-    display: block;
-    background-color: white;
-    height: 2px;
-    width: 20px;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translateX(-50%) rotate(90deg);
-}
-
-/* Dropdown menu styling */
-.menu-dropdown {
-    position: relative;
-}
-
-.menu-button {
-    font-size: 24px;
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.menu-content {
-    display: none;
-    position: absolute;
-    top: 40px;
-    right: 0;
-    background: white;
-    border: 1px solid #ccc;
-    padding: 10px;
-    z-index: 10;
-    transition: all 0.3s;
-}
-
-.menu-content a,
-.menu-content button {
-    display: block;
-    padding: 8px 12px;
-    text-decoration: none;
-    color: black;
-}
-
-.menu-content a:hover,
-.menu-content button:hover {
-    background: #f1f1f1;
-}
-
-/* Credit modal styling */
-.credit-modal-template,
-.all-credits-modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    overflow-y: auto;
-}
-
-.credit-modal-template {
-    top: 10px;
-    right: 10px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-.credit-content {
-    text-align: left;
-}
-
-.close-btn {
-    float: right;
-    font-size: 20px;
-    cursor: pointer;
-}
-
-.all-credits-modal {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    background-color: #222;
-}
-
-/* Edit sound modal */
-.edit-sound-modal {
-    display: flex;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #222;
-    z-index: 1000;
-    overflow-y: auto;
-}
-
-.edit-sound-modal .modal-header {
-    background-color: #222;
-    color: white;
-    padding: 10px;
-    text-align: center;
-}
-
-.edit-sound-modal .modal-body {
-    padding: 20px;
-    background-color: #222;
-    color: #acacac;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-/* Sound item and controls */
-.type-container {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-top: 10px;
-}
-
-.sound-list {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.sound-item {
-    flex: 1;
-    margin: 10px;
-    border: 1px solid #ddd;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #222;
-}
-
-.sound-player-controls {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
-    position: relative;
-}
-
-.sound-player-controls button {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    background-color: transparent;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    z-index: 1;
-}
-
-.sound-player-controls button:hover {
-    background-color: #0056b3;
-}
-
-.sound-player-controls .icon {
-    font-size: 18px;
-    position: static;
-}
-
-.sound-player-controls input[type="range"] {
-    width: 100px;
-}
-
-.update-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    background-color: #28a745;
-    color: white;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-}
-
-.update-button:hover {
-    background-color: #218838;
-}
-
-/* Audio controls */
-#audio-controls,
-#background-audio {
-    width: 300px;
-    margin: 0 auto;
-}
-
-.audio-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    padding: 20px 0;
-}
-
-/* Progress bar and next button */
-.progress-and-credits {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 50%;
-    margin: 0 auto;
-}
-
-#progressBar {
-    flex-grow: 1;
-    height: 4px;
-    background-color: rgba(255, 255, 255, 0.3);
-    margin-right: 10px;
-}
-
-#progress {
-    height: 100%;
-    background-color: rgba(76, 175, 80, 0.7);
-    width: 0%;
-}
-
-#nextButton {
-    padding: 0 10px;
-    font-size: 20px;
-    color: #4CAF50;
-    background: none;
-    border: none;
-    cursor: pointer;
-    transition: color 0.3s;
-}
-
-#nextButton:hover,
-#nextButton:focus {
-    color: #367C39;
-}
-
-/* Preset controls */
-#preset-controls {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#input-button-container {
-    display: flex;
-    align-items: center;
-}
-
-#preset-name {
-    width: 120px;
-    font-size: 12px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-#save-preset-button {
-    width: 25px;
-    height: 25px;
-    font-size: 20px;
-    cursor: pointer;
-    border: none;
-    background-color: #28a745;
-    color: #fff;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-}
-
-#save-preset-button:hover {
-    background-color: #218838;
-}
-
-#preset-dropdown {
-    padding: 5px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    margin: 0 auto;
-}
-
-/* Footer styling */
-footer {
-    background-color: #444;
-    padding: 20px 0;
-}
-
-.footer-content {
-    text-align: center;
-    color: white;
-}
-
-.footer-content a {
-    margin: 0 15px;
-    color: white;
-    text-decoration: none;
-}
-
-.footer-content a:hover {
-    text-decoration: underline;
-}
-
-/* Session Management Styling */
-.id-management {
-    background-color: #222;
-    border: 1px solid #444;
-    padding: 20px;
-    margin: 20px;
-    border-radius: 5px;
-    color: #fff;
-}
-
-.id-management h2 {
-    margin-top: 0;
-    margin-bottom: 15px;
-    text-align: center;
-    color: #fff;
-}
-
-.create-id, .join-id {
-    margin-bottom: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#disconnect-button {
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    border: none;
-    background-color: #f44336; /* Match the button-play style */
-    color: white;
-    font-size: 16px;
-    margin: 0 5px;
-    transition: background-color 0.3s;
-}
-
-#disconnect-button:hover {
-    background-color: #9b2820; /* Darker green */
-}
-
-
-#join-id-button {
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 5px;
-    border: none;
-    background-color: #4CAF50; /* Match the button-play style */
-    color: white;
-    font-size: 16px;
-    margin: 0 5px;
-    transition: background-color 0.3s;
-}
-
-#join-id-button:hover {
-    background-color: #367C39; /* Darker green */
-}
-
-#join-id-input {
-    padding: 10px;
-    width: 200px;
-    margin-right: 10px;
-    border-radius: 5px;
-    border: 1px solid #555;
-    background-color: #333;
-    color: #fff;
-}
-
-#join-id-input::placeholder {
-    color: #bbb;
-}
-
-#status-message {
-    text-align: center;
-    color: #FFD700; /* Gold color for visibility */
-    margin-top: 10px;
-}
-
-#your-id {
-    text-align: center;
-    margin-top: 10px;
-    color: #fff;
-}
-
-#your-id span {
-    font-weight: bold;
-    color: #4CAF50;
-}
-
-#connection-status {
-    text-align: center;
-    margin-top: 10px;
-    font-weight: bold;
-}
+@import './modal.css';
+@import './nav.css';
+@import './progressBar.css';
+@import './sessionManagement.css';
+@import './soudControls.css';
+@import './sounConteiner.css';
+@import './preset.css';
+@import './audioControl.css';
+@import './backgroundMusicCredits.css';
+@import './buttons.css';
+@import './creditModal.css';
+@import './dropDownMenu.css';
+@import './editSounds.css';
+@import './footer.css';
+@import './header.css';
+@import './ambianceControls.css';
+@import './contextSelector.css';
